--- a/ProjetoIntegrador.html
+++ b/ProjetoIntegrador.html
@@ -11,12 +11,13 @@
 <body>
 <div class="cabeçalho">
 <h1 class="h1cabeça">Fisicamente</h1>
+
 </div>
 <div class="esquerdo">
 
 
 </div>
-
+<div class="rodape"></div>
     
 </body>
 </html>
