--- a/ProjetoIntegrador.html
+++ b/ProjetoIntegrador.html
@@ -14,7 +14,17 @@
 
 </div>
 <div class="esquerdo">
-
+    <button type="button" class="btn">
+        <strong>SPACE</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+      
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button>
 
 </div>
 <div class="rodape"></div>
