Criação da Pagina Leis de Newton

--- a/Ondas.html
+++ b/Ondas.html
@@ -34,14 +34,16 @@
     <legend style="text-align: center;"><a href="https://www.youtube.com/watch?v=M2D5-zXlD6A"> Imagem Dísponivel
         Aqui</a>
     </legend>
+    <br>
     <p> Os pontos mais altos são chamados de cristas, e os mais baixos são chamados de vales, a distância entre o começo
       e o fim de uma onda é chamado período(T), representada pela parte em vermelho da figura 1, e também temos a
       amplitude(A), que é a “altura” da onda, ou seja, é a variação de altura em relação ao ponto inicial(linha do
       meio/tempo) (HELERBROCK, 2023).</p>
-      <br>
+    <br>
     <p> Há mais uma propriedade chamada Frequência, que é medida em Hertz (Hz) e que nos diz de quanto em quanto tempo
-      uma crista/vale passa por um ponto, a fórmula para se calcular a Frequência é 1 ➗ T (Período) (HELERBROCK, 2023).</p>
-      <br>
+      uma crista/vale passa por um ponto, a fórmula para se calcular a Frequência é 1 ➗ T (Período) (HELERBROCK, 2023).
+    </p>
+    <br>
     <p> E tendo esses dados podemos dizer que tipo de onda é, pois cada tipo de onda tem Período, Amplitude etc
       "específicas", e o meio que usamos para isso é medir a velocidade com que a onda se propaga com a fórmula
       Velocidade(V)= Comprimento da onda (que é a distância entre uma crista e outra, ou um vale e outro (HELERBROCK,
@@ -51,18 +53,32 @@
     λ = comprimento de onda (m)
     f = frequência (Hz ou s-1)
     </p>
-
+    <br>
+    <h3><strong class="textosTitulo"> Longitudinais e Transversais </strong></h3>
+    <br>
+    <p>
+      Segundo Frederico Borges de Almeida as ondas Longitudinais são ondas que podem se mover em qualquer direção, onde
+      ela pode se mover da esquerda e voltar para a direita ou ir para a direita e voltar para a esquerda, como exemplo
+      podemos dar uma mola que ao ser movimentada vai e volta e suas ondas se modificam dependendo do instante, mas já a
+      Transversais, são ondas que se movem em uma direção para sempre, por exemplo uma corda presa a algo, se você
+      agitá-la ela formará uma onda, irá até o ponto onde está presa e voltará a origem, assim como na figura 3.
+    </p>
+    <br>
+    <img src="LongTrans.png" alt="Longitudinais e Transversais" style="margin-left: 150px;">
+    <legend>Disponivel em:<a href="https://mundoeducacao.uol.com.br/fisica/ondas-2.htm"> Ondas. Conceito, natureza e tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
+<br>
+<p>     Algo que também é legal destacar são que ondas podem se propagar de forma unidimensional, bidimensional e tridimensional, onde cada uma ao se propagar de forma específica acaba tendo uma "características" próprias.(LOOS, 2023)</p>
   </div>
   <div id="caixa">
     <h3>Tópicos em Ondas</h3>
     <br>
-  <ul>
-    <li><a href=""><strong> Tipos de Ondas</strong></a></li>
-    <br>
-    <li><a href=""><strong> Fenômenos</strong></a> </li>
-  </ul>
-</div>
-  <div class="esquerdo">
+    <ul>
+      <li><a href=""><strong> Tipos de Ondas</strong></a></li>
+      <br>
+      <li><a href=""><strong> Fenômenos</strong></a> </li>
+    </ul>
+  </div>
+  <div class="esquerdoOndas">
     <h1>Tópicos</h1>
     <br>
 
