--- a/ProjetoIntegrador.html
+++ b/ProjetoIntegrador.html
@@ -82,7 +82,7 @@
       </button></a>
     <a href="Eletricidade.html">
       <br><button type="button" class="btn">
-        <strong>Eletrecidade</strong>
+        <strong>Eletricidade</strong>
         <div id="container-stars">
           <div id="stars"></div>
         </div>
