criaçao de algo novo

--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fisicamente</title>
+  <title>Leis de Newton</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <script src="ProjetoIntegrador.js"></script>
   <link rel="icon" type="image/x-icon" href="OIG__2_-removebg-preview.png">
@@ -16,7 +16,113 @@
     <h1 class="h1cabeça">Fisicamente</h1>
 
   </div>
-  <div class="esquerdo">
+  <div class="conteudo">
+    <h1><strong class="textosTitulo"><em> Leis De Newton </em> </strong></h1>
+    <br>
+    <p>Você já ouviu falar no cara chamado Isaac Newton que certo dia caiu uma maçã na cabeça dele e ele propôs a Lei da
+      Gravidade, então este mesmo cara (Newton) além de propor várias teorias e ser um dos maiores fisicos que ja se
+      teve na historia e que contribuiu em todas as áreas de forma gigantesca, ele também propôs três leis que são
+      fundamentais para a física e inclusive quando você for estudar física Leis de Newton é um assunto indispensável
+      para a sua vida acadêmica (GOUVEIA, 2023).
+      <br>
+    </p>
+    <br>
+
+
+    <br>
+    <img src="R (1).jpeg" alt="partes das ondas" width="600px" style="margin-left: 110px;">
+    <legend style="text-align: center;"><a href="http://fisica-marian3.blogspot.com/"> Imagem Dísponivel
+        Aqui</a>
+    </legend>
+    <br>
+    <h3><strong class="textosTitulo">Lei Da Inercia
+    </strong></h3>
+    <br>
+    <p> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da Inércia.
+      (HELERBROCK, Rafael, 2023).
+    </p>
+    <br>
+    <p> “Segundo Rafael Helerbrock (2023) "A primeira lei de Newton, também conhecida como princípio da inércia, afirma
+      que todo corpo permanece em seu estado de repouso ou em movimento retilíneo e uniforme caso as forças que atuem
+      sobre ele se anulem.”
+    </p>
+    <br>
+    <p> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende ficar parado,
+      até venha alguém mexer nele, exemplo, seu celular, se você deixar ele no sofá ele ficará lá até alguém pegar ele,
+      sem uma força exterior ele continuará parado, e o mesmo se aplica para corpos em movimento, mas para dar um
+      exemplo precisamos ir lá pro espaço, já que lá não tem ar nem gravidade para nos atrapalhar, agora dando o
+      exemplo, voce esta la no espaço e joga uma caneta para qualquer lado, essa caneta irá continuar para sempre
+      viajando na velocidade que você jogou ela até que uma força exterior atravesse o caminho dela(como um asteroide,
+      ou a caneta entrar em órbita de um objeto grande, apesar da massa da caneta não ser suficiente para ela entrar em
+      órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
+    </p>
+    <br>
+    <img src="tirinha.jpg" alt="partes das ondas" width="800px">
+    <legend style="text-align: center;"><a href="https://brainly.com.br/tarefa/18695505"> Imagem Dísponivel
+        Aqui</a>
+    </legend>
+    <br>
+    <h3><strong class="textosTitulo"> Segunda Lei de Newton: Princípio Fundamental da Dinâmica
+      </strong></h3>
+    <br>
+    <p>
+      A segunda Lei de Newton é o princípio Fundamental da Dinâmica, (HELERBROCK, 2023).
+
+      “ Segundo Pâmella Raphaella Melo (2023) a segunda lei de
+      Newton determina que se aplicarmos
+      força sobre um objeto, ela produzirá movimento, cuja
+      aceleração é proporcional à sua massa."
+
+    </p>
+    <p>Mas FISICAMENTE FALANDO, esta lei diz que você precisa aplicar uma força proporcionalmente a massa do corpo que
+      você quer mover, e também que, a aceleração deste corpo será proporcional a massa (HELERBROCK, 2023).
+      Vamos pensar num exemplo assim: você tem duas bolas num campo de futebol, mas vamos dispensar a grama, ar, e o
+      resto, quero dizer que não vamos levar em consideração atrito. Mas voltando às bolas, você tem uma bola de futebol
+      do seu tamanho, mas com uma massa pequena, e ao lado dela tem uma bola de madeira de uma massa um pouco maior
+      (HELERBROCK, 2023).
+      Pronto, agora vamos a prática, você começa a empurrar a bola de futebol, como ela é leve, você usa pouca força e
+      também a aceleração dela não é muito alta, e se você soltá-la(sem dar impulso) ela não irá muito longe, mas agora
+      vamos a de madeira, você começa a empurrá-la e percebe que precisa de mais força para tirá-la do repouso, mas como
+      você vai para a academia você acaba conseguindo tirá-la do lugar e vai empurrando ela, e com alguns metros de você
+      empurrando ela já pode-se perceber que ela vai aumentando sua velocidade, e de repente você solta ela(sem dar
+      impulso), e então ela percorre muito mais que a bola de futebol (HELERBROCK, 2023).
+      Resumindo é que você precisa fazer mais força para empurrar algo pesado, e pouca força para empurrar algo leve, e
+      também que algo pesado acelera mais que algo leve (HELERBROCK, 2023).
+    </p>
+    <br>
+    <img src="segunda lei.webp" alt="Longitudinais e Transversais" style="margin-left: 50px;">
+    <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm"> Ondas. Conceito,
+        natureza e
+        tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
+    <br>
+
+    <h3><strong class="textosTitulo"> Terceira Lei de Newton-Lei de Ação e Reação
+      </strong></h3>
+    <br>
+    <p>
+      “ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação, afirma que,
+      para toda força de ação que é aplicada a um corpo, surge uma força de reação em um corpo diferente. Essa força de
+      reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."
+
+      Mas FISICAMENTE FALANDO, ela quer dizer que se você aplica uma força a algo ele devolve de alguma forma, posso dar
+      vários exemplos. O primeiro, se alguém chutar uma pedra e jogá-la longe, mas a pedra também vai “chutar de volta”,
+      parece estranho, mas calma, ao menos que o alguém seja um robô ao chutar a pedra sente dor, e essa dor é a reação
+      sobre a ação de chutar. Outro exemplo é quando se precisa empurrar algo pesado, uma geladeira pro caso, se alguém
+      tentar empurrar ela, a geladeira “devolverá” ficando parada, a geladeira faz força pra ficar parada, a ação é
+      empurrar, e a reação é ela fazer força pra ficar parada. É só pra deixar claro esses exemplos são figurados, mas
+      funcionam, até porque pedras e geladeiras no mundo real são seres inanimados.(HELERBROCK, 2023)
+      <br>
+    </p>
+    <br>
+    <img src="terceiralei.webp" alt="Longitudinais e Transversais" style="margin-left: 10px;">
+    <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Ondas. Conceito,
+        natureza e
+        tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
+
+  </div>
+
+
+  <div class="esquerdoNewton">
     <h1>Tópicos</h1>
     <br>
 
