--- a/CorrentesEletricas.html
+++ b/CorrentesEletricas.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fisicamente</title>
+  <title>Correntes Elétricas</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <script src="ProjetoIntegrador.js"></script>
   <link rel="icon" type="image/x-icon" href="OIG__2_-removebg-preview.png">
