--- a/Ondas.html
+++ b/Ondas.html
@@ -17,6 +17,7 @@
   </div>
   <div class="conteudo">
     <h1><strong class="textosTitulo"><em> Fenômenos Ondulatórios </em> </strong></h1>
+    <h1><strong class="textosTitulo"><em> Fenômenos Ondulatórios </em> </strong></h1>
     <br>
     <p>Nesta página será abordado conteúdo sobre Fenômenos Ondulatórios, Ondas, Tipos de Ondas e etc.
       Definição de onda:
