--- a/Mecanica.html
+++ b/Mecanica.html
@@ -13,102 +13,258 @@
 
 <body>
   <div class="cabeçalho">
-    <h1 class="h1cabeça">Fisicamente</h1>
+    <h1 class="h1cabeça"><strong class="cabeça"> Fisicamente </strong></h1>
+  </div>
+  <div class="conteudo">
+    <h1><strong class="textosTitulo"><em> Mecânica </em> </strong></h1>
+    <br>
+    <p>
+      “Segundo Rafael Helerbrock : Mecânica é
+      uma grande área da física que se concentra no
+      estudo do movimento e repouso dos corpos,
+      estejam estes ou não sob a ação de forças."
+
+      <br>
+    </p>
+    <br>
+    <p>Sendo dividida em mecânica clássica, relativística e quântica.
+      A mecânica, assim como qualquer área da física, sofreu diversas alterações durante o tempo, as bases do que
+      chamamos de “mecânica clássica” foram publicadas por Galileu Galilei, Johannes Kepler e Isaac Newton, e no século
+      XX sofreu alterações sendo apresentada a mecânica relativística por Albert Einstein, onde era levado em conta
+      movimentos próximos à da luz junto a mecânica clássica. Entre 1925 e 1926 foi apresentada a “mecânica quântica”
+      pelas contribuições de Heisenberg, Born, Jordan, Dirac, Pauli, Wiener, Schrödinger e outros.(HELERBROCK, 2023).
+    </p>
+
+    <br>
+    <h3><strong class="textosTitulo">O que ela Estuda?
+      </strong></h3>
+    <br>
+    <p>
+      A mecânica é um ramo da física que estuda o movimento e o comportamento dos objetos sob a influência da força, ou
+      seja, todo e qualquer movimento provocado por determinado corpo que sofre a influência de determinada
+      força.(HELERBROCK, 2023).
+    </p>
+    <br>
+    <img src="mecanicafoto1.jpeg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <legend style="text-align: center;"><a
+        href="https://www.pexels.com/pt-br/foto/astronauta-cosmonauta-astronomia-atmosfera-586056/"> Imagem Dísponivel
+        Aqui</a>
+    </legend>
+    <br>
+    <h3><strong class="textosTitulo">Mecânica Clássica
+
+      </strong></h3>
+    <br>
+    <p> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da Inércia.
+      (HELERBROCK, Rafael, 2023).
+    </p>
+    <br>
+    <p>
+      A mecânica clássica estuda as variações de força e energia que atuam sobre um corpo, sendo desenvolvida antes do
+      século XX e por consequência antes da mecânica relativística, suas análises levam em consideração apenas objetos
+      que não estão perto da velocidade da luz, sendo uma ótima escolha para estudar nosso cotidiano. (FERNANDES, 2023).
+      Exemplos: podemos calcular a velocidade de carros, a pressão de uma torneira além de ser a base para o
+      funcionamento dos computadores e celulares.
+    </p>
+    <br>
+    <p> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende ficar parado,
+      até venha alguém mexer nele, exemplo, seu celular, se você deixar ele no sofá ele ficará lá até alguém pegar ele,
+      sem uma força exterior ele continuará parado, e o mesmo se aplica para corpos em movimento, mas para dar um
+      exemplo precisamos ir lá pro espaço, já que lá não tem ar nem gravidade para nos atrapalhar, agora dando o
+      exemplo, voce esta la no espaço e joga uma caneta para qualquer lado, essa caneta irá continuar para sempre
+      viajando na velocidade que você jogou ela até que uma força exterior atravesse o caminho dela(como um asteroide,
+      ou a caneta entrar em órbita de um objeto grande, apesar da massa da caneta não ser suficiente para ela entrar em
+      órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
+    </p>
+    <br>
+    <h3><strong class="textosTitulo">Cinematica
+
+      </strong></h3>
+    <br>
+
+    <p>A cinemática é uma parte da mecânica que estuda o movimento dos objetos, sem se preocupar com as causas desse
+      movimento, ou seja, sem considerar as forças que atuam sobre o objeto. A cinemática se preocupa em descrever o
+      movimento em termos de posição, velocidade e aceleração do objeto, bem como a trajetória que ele percorre.(DIAS,
+      2023).</p>
+
+    <img src="fotomecanica2.webp" alt="Forças" width="800px">
+    <legend style="text-align: center;"><a href="https://brainly.com.br/tarefa/18695505"> Imagem Dísponivel
+        Aqui</a>
+    </legend>
+    <br>
+    <h3><strong class="textosTitulo">Movimento Retilíneo Uniforme (MRU) </strong></h3>
+    <br>
+    <p>
+      Segundo o Prof. Augusto Melo(2023), o movimento uniforme é um tipo de movimento em que um objeto percorre
+      distâncias iguais em intervalos de tempo iguais, mantendo a mesma velocidade. Sendo assim a velocidade permanece
+      constante e invariável por todo trajeto além de sua trajetória ser uma reta.
+      A equação que descreve o movimento é:
+
+    <h3 style="margin-left: 200px;"> <strong class="textosTitulo">S = s0 + V * t</strong> </h3>
+    <p> S =é a posição final do objeto em relação a um ponto de referência.</p>
+    <p> s0=é a posição inicial do objeto em relação ao mesmo ponto de referência
+    </p>
+    <p> V= é a velocidade constante do objeto.</p>
+    <p> t = é o tempo em que o objeto levou para percorrer a trajetória.</p>
+
+
+    <br>
+
+
+    <h3><strong class="textosTitulo">Movimento Retilíneo Uniformemente Variado (MRUV) </strong></h3>
+    <p> um tipo de movimento em que a velocidade de um objeto varia uniformemente ao longo do tempo, sob a ação de uma
+      aceleração constante, ou seja, a velocidade aumenta ou diminui, contudo a aceleração permanece a mesma.(MARTINS,
+      2023) .
+      A equação da cinemática que descreve o movimento uniformemente variado é dada por:
+
+    <p> <strong class="textosTitulo"> S = S0 + V0*t + (1/2)at^2</strong></p>
+<hr>
+    <br>
+    <h3><strong class="textosTitulo"> Movimento Circular Uniforme (MCU)
+
+      </strong></h3>
+    <br>
+    <p> No vídeo Movimento Circular Uniforme - Aula 01 do canal
+      Davi Oliveira - Física 2.0, é apresentado que o movimento circular uniforme é um tipo de movimento em que um
+      objeto se move em uma trajetória circular com velocidade constante, a velocidade tangencial ( velocidade
+      instantânea do objeto considerado) em qualquer ponto da rota permanece a mesma, contudo a sua direção muda
+      continuamente em direção ao centro da circunferência.(OLIVEIRA, 2023).
+      A equação desse movimento é:
+    </p>
+    <p> θ = ω*t
+
+    </p>
+
+
+    <p> θ é o ângulo percorrido pelo objeto na trajetória circular.</p>
+    <p> ω é a velocidade angular do objeto.</p>
+    <p> t é o tempo decorrido desde o início do movimento.</p>
+    </p>
+    <br>
+
+    <h3><strong class="textosTitulo"> Terceira Lei de Newton-Lei de Ação e Reação
+      </strong></h3>
+    <br>
+    <p>
+      “ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação, afirma que,
+      para toda força de ação que é aplicada a um corpo, surge uma força de reação em um corpo diferente. Essa força de
+      reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."
+
+      Mas FISICAMENTE FALANDO, ela quer dizer que se você aplica uma força a algo ele devolve de alguma forma, posso dar
+      vários exemplos. O primeiro, se alguém chutar uma pedra e jogá-la longe, mas a pedra também vai “chutar de volta”,
+      parece estranho, mas calma, ao menos que o alguém seja um robô ao chutar a pedra sente dor, e essa dor é a reação
+      sobre a ação de chutar. Outro exemplo é quando se precisa empurrar algo pesado, uma geladeira pro caso, se alguém
+      tentar empurrar ela, a geladeira “devolverá” ficando parada, a geladeira faz força pra ficar parada, a ação é
+      empurrar, e a reação é ela fazer força pra ficar parada. É só pra deixar claro esses exemplos são figurados, mas
+      funcionam, até porque pedras e geladeiras no mundo real são seres inanimados.(HELERBROCK, 2023)
+      <br>
+    </p>
+    <br>
+    <img src="terceiralei.webp" alt="Longitudinais e Transversais" style="margin-left: 10px;">
+    <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Ondas. Conceito,
+        natureza e
+        tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
 
   </div>
-  <div class="esquerdo">
+  <div class="esquerdoMecanica">
     <h1>Tópicos</h1>
     <br>
 
-    <button type="button" class="btn">
-      <strong>Ondas</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+    <a href="Ondas.html"><button type="button" class="btn">
+        <strong>Ondas</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
     <br>
-    <button type="button" class="btn">
-      <strong>Leis de Newton</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+    <a href="Leis De Newton.html">
+      <button type="button" class="btn">
+        <strong>Leis de Newton</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button>
-    <br><button type="button" class="btn">
-      <strong>Mecânica</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Mecanica.html">
+      <br><button type="button" class="btn">
+        <strong>Mecânica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button>
-    <br><button type="button" class="btn">
-      <strong>Energia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Energia.html">
+      <br><button type="button" class="btn">
+        <strong>Energia</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button>
-    <br><button type="button" class="btn">
-      <strong>Eletrecidade</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Eletricidade.html">
+      <br><button type="button" class="btn">
+        <strong>Eletricidade</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button>
-    <br><button type="button" class="btn">
-      <strong>Correntes Elétricas</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="CorrentesEletricas.html">
+      <br><button type="button" class="btn">
+        <strong>Correntes Elétricas</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button>
-    <br><button type="button" class="btn">
-      <strong>Termofísica</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="TermoFisica.html">
+      <br><button type="button" class="btn">
+        <strong>Termofísica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button>
-    <br><button type="button" class="btn">
-      <strong>Óptica</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <br><a href="Optica.html"><button type="button" class="btn">
+        <strong>Óptica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
     <br>
   </div>
   <div class="rodape"></div>
