--- a/Eletricidade.html
+++ b/Eletricidade.html
@@ -13,14 +13,13 @@
 
 <body>
   <div class="cabeçalho">
-    <h1 class="h1cabeça">Fisicamente</h1>
-
+    <h1 class="h1cabeça"><strong class="cabeça"> Fisicamente </strong></h1>
   </div>
   <div class="esquerdo">
     <h1>Tópicos</h1>
     <br>
 
-    <button type="button" class="btn">
+    <a href="Ondas.html"><button type="button" class="btn">
       <strong>Ondas</strong>
       <div id="container-stars">
         <div id="stars"></div>
@@ -30,8 +29,9 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
-    <br>
+    </button></a>
+  <br>
+  <a href="Leis De Newton.html">
     <button type="button" class="btn">
       <strong>Leis de Newton</strong>
       <div id="container-stars">
@@ -42,7 +42,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
+    </button></a>
+  <a href="Mecanica.html">
     <br><button type="button" class="btn">
       <strong>Mecânica</strong>
       <div id="container-stars">
@@ -53,7 +54,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
+    </button></a>
+  <a href="Energia.html">
     <br><button type="button" class="btn">
       <strong>Energia</strong>
       <div id="container-stars">
@@ -64,9 +66,10 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
+    </button></a>
+  <a href="Eletricidade.html">
     <br><button type="button" class="btn">
-      <strong>Eletrecidade</strong>
+      <strong>Eletricidade</strong>
       <div id="container-stars">
         <div id="stars"></div>
       </div>
@@ -75,7 +78,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
+    </button></a>
+  <a href="CorrentesEletricas.html">
     <br><button type="button" class="btn">
       <strong>Correntes Elétricas</strong>
       <div id="container-stars">
@@ -86,7 +90,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
+    </button></a>
+  <a href="TermoFisica.html">
     <br><button type="button" class="btn">
       <strong>Termofísica</strong>
       <div id="container-stars">
@@ -97,8 +102,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
-    <br><button type="button" class="btn">
+    </button></a>
+  <br><a href="Optica.html"><button type="button" class="btn">
       <strong>Óptica</strong>
       <div id="container-stars">
         <div id="stars"></div>
@@ -108,9 +113,9 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
-    <br>
-  </div>
+    </button></a>
+  <br>
+</div>
   <div class="rodape"></div>
 
 </body>
