--- a/Ondas.html
+++ b/Ondas.html
@@ -13,11 +13,11 @@
 
 <body>
   <div class="cabeçalho">
-    <h1 class="h1cabeça">Fisicamente</h1>
+    <h1 class="h1cabeça"><strong class="cabeça"> Fisicamente </strong></h1>
   </div>
   <div class="conteudo">
     <h1><strong class="textosTitulo"><em> Fenômenos Ondulatórios </em> </strong></h1>
-    <h1><strong class="textosTitulo"><em> Fenômenos Ondulatórios </em> </strong></h1>
+    
     <br>
     <p>Nesta página será abordado conteúdo sobre Fenômenos Ondulatórios, Ondas, Tipos de Ondas e etc.
       Definição de onda:
@@ -83,7 +83,7 @@
     <h1>Tópicos</h1>
     <br>
 
-    <button type="button" class="btn">
+    <a href="Ondas.html"><button type="button" class="btn">
       <strong>Ondas</strong>
       <div id="container-stars">
         <div id="stars"></div>
@@ -93,8 +93,9 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
-    <br>
+    </button></a>
+  <br>
+  <a href="Leis De Newton.html">
     <button type="button" class="btn">
       <strong>Leis de Newton</strong>
       <div id="container-stars">
@@ -105,7 +106,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
+    </button></a>
+  <a href="Mecanica.html">
     <br><button type="button" class="btn">
       <strong>Mecânica</strong>
       <div id="container-stars">
@@ -116,7 +118,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
+    </button></a>
+  <a href="Energia.html">
     <br><button type="button" class="btn">
       <strong>Energia</strong>
       <div id="container-stars">
@@ -127,9 +130,10 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
+    </button></a>
+  <a href="Eletricidade.html">
     <br><button type="button" class="btn">
-      <strong>Eletrecidade</strong>
+      <strong>Eletricidade</strong>
       <div id="container-stars">
         <div id="stars"></div>
       </div>
@@ -138,7 +142,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
+    </button></a>
+  <a href="CorrentesEletricas.html">
     <br><button type="button" class="btn">
       <strong>Correntes Elétricas</strong>
       <div id="container-stars">
@@ -149,7 +154,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
+    </button></a>
+  <a href="TermoFisica.html">
     <br><button type="button" class="btn">
       <strong>Termofísica</strong>
       <div id="container-stars">
@@ -160,8 +166,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
-    <br><button type="button" class="btn">
+    </button></a>
+  <br><a href="Optica.html"><button type="button" class="btn">
       <strong>Óptica</strong>
       <div id="container-stars">
         <div id="stars"></div>
@@ -171,9 +177,9 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
-    </button>
-    <br>
-  </div>
+    </button></a>
+  <br>
+</div>
   <div class="rodape"></div>
 
 </body>
