--- a/ProjetoIntegrador.html
+++ b/ProjetoIntegrador.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="cabeçalho">
-    <h1 class="h1cabeça">Fisicamente</h1>
+    <h1 class="h1cabeça"><strong class="cabeça"> Fisicamente </strong></h1>
 
   </div>
   <div class="conteudo">
