--- a/Mecanica.html
+++ b/Mecanica.html
@@ -166,7 +166,8 @@
         tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
 
   </div>
-  <div class="esquerdoMecanica">
+  
+  <div class="esquerdoNewton">
     <h1>Tópicos</h1>
     <br>
 
