--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -8,7 +8,7 @@
   <title>Leis de Newton</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <script src="ProjetoIntegrador.js"></script>
-  <link rel="icon" type="image/x-icon" href="OIG__2_-removebg-preview.png">
+  <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 
 
     <br>
-    <img src="R (1).jpeg" alt="partes das ondas" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/R (1).jpeg" alt="partes das ondas" width="600px" style="margin-left: 110px;">
     <legend style="text-align: center;"><a href="http://fisica-marian3.blogspot.com/"> Imagem Dísponivel
         Aqui</a>
     </legend>
@@ -56,7 +56,7 @@
       órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
     </p>
     <br>
-    <img src="tirinha.jpg" alt="partes das ondas" width="800px">
+    <img src="Imagens/tirinha.jpg" alt="partes das ondas" width="800px">
     <legend style="text-align: center;"><a href="https://brainly.com.br/tarefa/18695505"> Imagem Dísponivel
         Aqui</a>
     </legend>
@@ -89,7 +89,7 @@
       também que algo pesado acelera mais que algo leve (HELERBROCK, 2023).
     </p>
     <br>
-    <img src="segunda lei.webp" alt="Longitudinais e Transversais" style="margin-left: 50px;">
+    <img src="Imagens/segunda lei.webp" alt="Longitudinais e Transversais" style="margin-left: 50px;">
     <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm"> Ondas. Conceito,
         natureza e
         tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
@@ -113,7 +113,7 @@
       <br>
     </p>
     <br>
-    <img src="terceiralei.webp" alt="Longitudinais e Transversais" style="margin-left: 10px;">
+    <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais" style="margin-left: 10px;">
     <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Ondas. Conceito,
         natureza e
         tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
