--- a/Mecanica.html
+++ b/Mecanica.html
@@ -8,7 +8,7 @@
   <title>Mecânica</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <script src="ProjetoIntegrador.js"></script>
-  <link rel="icon" type="image/x-icon" href="OIG__2_-removebg-preview.png">
+  <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
       força.(HELERBROCK, 2023).
     </p>
     <br>
-    <img src="mecanicafoto1.jpeg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/mecanicafoto1.jpeg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
     <legend style="text-align: center;"><a
         href="https://www.pexels.com/pt-br/foto/astronauta-cosmonauta-astronomia-atmosfera-586056/"> Imagem Dísponivel
         Aqui</a>
@@ -87,7 +87,7 @@
       movimento em termos de posição, velocidade e aceleração do objeto, bem como a trajetória que ele percorre.(DIAS,
       2023).</p>
 
-    <img src="fotomecanica2.webp" alt="Forças" width="800px">
+    <img src="Imagens/fotomecanica2.webp" alt="Forças" width="800px">
     <legend style="text-align: center;"><a href="https://brainly.com.br/tarefa/18695505"> Imagem Dísponivel
         Aqui</a>
     </legend>
@@ -160,7 +160,7 @@
       <br>
     </p>
     <br>
-    <img src="terceiralei.webp" alt="Longitudinais e Transversais" style="margin-left: 10px;">
+    <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais" style="margin-left: 10px;">
     <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Ondas. Conceito,
         natureza e
         tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
