--- a/Ondas.html
+++ b/Ondas.html
@@ -8,7 +8,7 @@
   <title>Ondas</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <script src="ProjetoIntegrador.js"></script>
-  <link rel="icon" type="image/x-icon" href="OIG__2_-removebg-preview.png">
+  <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     </p>
 
     <br>
-    <img src="ondapartes.png" alt="partes das ondas" width="800px">
+    <img src="Imagens/ondapartes.png" alt="partes das ondas" width="800px">
     <legend style="text-align: center;"><a href="https://www.youtube.com/watch?v=M2D5-zXlD6A"> Imagem Dísponivel
         Aqui</a>
     </legend>
@@ -65,7 +65,7 @@
       agitá-la ela formará uma onda, irá até o ponto onde está presa e voltará a origem, assim como na figura 3.
     </p>
     <br>
-    <img src="LongTrans.png" alt="Longitudinais e Transversais" style="margin-left: 150px;">
+    <img src="Imagens/LongTrans.png" alt="Longitudinais e Transversais" style="margin-left: 150px;">
     <legend>Disponivel em:<a href="https://mundoeducacao.uol.com.br/fisica/ondas-2.htm"> Ondas. Conceito, natureza e tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
 <br>
 <p>     Algo que também é legal destacar são que ondas podem se propagar de forma unidimensional, bidimensional e tridimensional, onde cada uma ao se propagar de forma específica acaba tendo uma "características" próprias.(LOOS, 2023)</p>
