--- a/Bibliografia.html
+++ b/Bibliografia.html
@@ -130,7 +130,7 @@
     <br>
   </div>
 </button></a>
-<br><a href="Bibliografia.html"><button type="button" class="btn">
+<br><a href="Optica.html"><button type="button" class="btn">
     <strong>Bibliografia</strong>
     <div id="container-stars">
       <div id="stars"></div>
