--- a/Mecanica.html
+++ b/Mecanica.html
@@ -142,32 +142,26 @@
     </p>
     <br>
 
-    <h3><strong class="textosTitulo"> Terceira Lei de Newton-Lei de Ação e Reação
-      </strong></h3>
-    <br>
-    <p>
-      “ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação, afirma que,
-      para toda força de ação que é aplicada a um corpo, surge uma força de reação em um corpo diferente. Essa força de
-      reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."
-
-      Mas FISICAMENTE FALANDO, ela quer dizer que se você aplica uma força a algo ele devolve de alguma forma, posso dar
-      vários exemplos. O primeiro, se alguém chutar uma pedra e jogá-la longe, mas a pedra também vai “chutar de volta”,
-      parece estranho, mas calma, ao menos que o alguém seja um robô ao chutar a pedra sente dor, e essa dor é a reação
-      sobre a ação de chutar. Outro exemplo é quando se precisa empurrar algo pesado, uma geladeira pro caso, se alguém
-      tentar empurrar ela, a geladeira “devolverá” ficando parada, a geladeira faz força pra ficar parada, a ação é
-      empurrar, e a reação é ela fazer força pra ficar parada. É só pra deixar claro esses exemplos são figurados, mas
-      funcionam, até porque pedras e geladeiras no mundo real são seres inanimados.(HELERBROCK, 2023)
-      <br>
-    </p>
-    <br>
-    <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais" style="margin-left: 10px;">
-    <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Ondas. Conceito,
-        natureza e
-        tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
-
+   
+<br>
   </div>
   
-  <div class="esquerdoNewton">
+  <div id="caixa">
+    <h3>Tópicos em Mecanica</h3>
+    <br>
+    <ul>
+      <li><a href=""><strong> Mecanica Relativista</strong></a></li>
+      <br>
+      <li><a href=""><strong> Cinematica </strong></a></li>
+      <br>
+      <li><a href=""><strong> Dinamica</strong></a></li>
+      <br>
+      
+    </ul>
+  </div>
+  
+
+  <div class="esquerdoMecanica">
     <h1>Tópicos</h1>
     <br>
 
